# planercnn

./: README.md  config.py  evaluate.py  evaluate_utils.py  options.py  train_anchor_scores.py  train_planercnn.py  utils.py  visualize_utils.py
comp_score/: CMakeLists.txt  compScorePy.cpp  setup.py
data_prep/: comp_anchor_scores.py  convert_pth.py  create_scene.py  parse.py  stereo_rect.py  test_nms.py  verify_planes.py
data_prep/Renderer/: CMakeLists.txt  main.cpp
datasets/: inference_dataset.py  plane_stereo_dataset.py  scannet_scene.py  scenenet_rgbd_dataset.py  scenenet_rgbd_scene.py  scenenet_rgbd_stereo_dataset.py  select_splits.py  unpack_scannet.py
models/: model.py  modules.py
nms_extension/src/: nms_kernel.cu
